Return after reposting BrowserChildProcessHostImpl::OnMojoError() on the right thread

BUG=667280

Review-Url: https://codereview.chromium.org/2522453002
Cr-Commit-Position: refs/heads/master@{#433546}

Former-commit-id: 91f1d419f7cb11be2f8b6bc64109aba0b0412072